hphp/test/zend/good/ext/standard/tests/strings/bug50847.php
<?php
$var = '<param value="' . str_repeat("a", 2048) . '" />';
var_dump(strip_tags($var, "<param>"), strip_tags($var));
?>