hphp/test/zend/bad/ext-simplexml/bug46048.php
<?php
$xml = '
<data id="1">
    <key>value</key>
</data>
';
$obj = simplexml_load_string($xml);
print_r(get_object_vars($obj));
?>
===DONE===